# Ray_Tracing_Workshop

./: .gitignore  CMakeLists.txt  README.md
lib/Include/gl_util/: Camera.h  Shader.h
lib/Include/glad/: glad.h
source/: BVH.h  Material.h  Renderer.h  Scene.h  glad.c  main.cpp
source/Objects/: cornell_box.mtl  cube.mtl  monkey.mtl
source/Shaders/: AlbedoFragment.shader  NormalFragment.shader  PathTraceFragment.shader
